numpy arrays indexing files added

--- a/Numpy/array.indexing.ipynb
+++ b/Numpy/array.indexing.ipynb
@@ -190,6 +190,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last element from 2nd dim:  10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([[1,2,3,4,5], [6,7,8,9,10]])\n",
+    "\n",
+    "print('Last element from 2nd dim: ', arr[1, -1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
