statistics with paython

--- a/Statistic/range_varience_sd.ipynb
+++ b/Statistic/range_varience_sd.ipynb
@@ -122,6 +122,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Range:  32\n",
+      "Variance:  100.9795918367347\n",
+      "Standat Deviation: 10.0488602257537\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "data =  [10,12,17,20,25,27,42]\n",
+    "print(\"Range: \", np.max(data)-np.min(data))\n",
+    "print(\"Variance: \", np.var(data))\n",
+    "print(\"Standat Deviation:\", np.std(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standat Deviation: 1.3997084244475304\n",
+      "Standat Deviation: 1.0690449676496976\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "data1 = [0,0,0,2,2,2,4]\n",
+    "data2 = [0,2,2,2,2,2,4]\n",
+    "print(\"Standat Deviation:\", np.std(data1))\n",
+    "print(\"Standat Deviation:\", np.std(data2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
