statistics with paython

--- a/Statistic/range_varience_sd.ipynb
+++ b/Statistic/range_varience_sd.ipynb
@@ -167,6 +167,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "59\n"
+     ]
+    }
+   ],
+   "source": [
+    "# range\n",
+    "import numpy\n",
+    "\n",
+    "values = [13,21,21,40,48,55,72]\n",
+    "\n",
+    "x = numpy.ptp(values) #acronim for 'poeak to peak'\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
