--- a/Statistic/W3S/home.ipynb
+++ b/Statistic/W3S/home.ipynb
@@ -128,15 +128,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.0 21.0 41.0 49.75 13.56\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "values = [13,21,21,40,42,48,55,72]\n",
-    "result = np.quantile(values,[0,0.25,0.5,0.75,1])\n",
-    "print(result)"
+    "result1 = np.percentile(values,0)\n",
+    "result2 = np.percentile(values,25)\n",
+    "result3 = np.percentile(values,50)\n",
+    "result4 = np.percentile(values,75)\n",
+    "result5 = np.percentile(values,1)\n",
+    "print(result1,result2,result3,result4,result5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "\n",
+    "values = [13,21,21,40,42,48,55,72]\n",
+    "\n",
+    "x = stats.iqr(values)\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
