--- a/Statistic/new.ipynb
+++ b/Statistic/new.ipynb
@@ -2,33 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean: 37.0\n",
-      "median: 30.0\n",
-      "mode: 33\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from scipy import stats\n",
-    "\n",
-    "salary = [102, 33, 26, 27, 30, 25, 33, 33, 24]\n",
-    "\n",
-    "mean_salary = np.mean(salary)\n",
-    "print(\"mean:\", mean_salary)\n",
-    "\n",
-    "median_salary = np.median(salary)\n",
-    "print(\"median:\", median_salary)\n",
-    "\n",
-    "mode_salary = stats.mode(salary)\n",
-    "print(\"mode:\", mode_salary[0][0])"
+    "print()"
    ]
   },
   {
@@ -41,10 +27,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "9920565f38e5baefdb4026c37eef4637400a2582ed12a30c7a979c1724ec1673"
+   "hash": "d47a635750c5abe8fe9b08f32ac71da7b52d1649844538153bf0c842ca5f1169"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3.8.12 64-bit ('base': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -58,7 +44,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
