--- a/Pandas/preclass_01.ipynb
+++ b/Pandas/preclass_01.ipynb
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
        "6   17       G   Mumbai      F             red"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>age</th>\n",
        "      <th>city</th>\n",
        "      <th>gender</th>\n",
@@ -998,13 +997,11 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A</th>\n",
-       "      <td>0</td>\n",
        "      <td>10</td>\n",
        "      <td>Gurgaon</td>\n",
        "      <td>M</td>\n",
@@ -1012,7 +1009,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>1</td>\n",
        "      <td>22</td>\n",
        "      <td>Delhi</td>\n",
        "      <td>F</td>\n",
@@ -1020,7 +1016,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C</th>\n",
-       "      <td>2</td>\n",
        "      <td>13</td>\n",
        "      <td>Mumbai</td>\n",
        "      <td>F</td>\n",
@@ -1028,7 +1023,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>D</th>\n",
-       "      <td>3</td>\n",
        "      <td>21</td>\n",
        "      <td>Delhi</td>\n",
        "      <td>M</td>\n",
@@ -1036,7 +1030,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>E</th>\n",
-       "      <td>4</td>\n",
        "      <td>12</td>\n",
        "      <td>Mumbai</td>\n",
        "      <td>M</td>\n",
@@ -1044,7 +1037,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>F</th>\n",
-       "      <td>5</td>\n",
        "      <td>11</td>\n",
        "      <td>Delhi</td>\n",
        "      <td>M</td>\n",
@@ -1052,7 +1044,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>G</th>\n",
-       "      <td>6</td>\n",
        "      <td>17</td>\n",
        "      <td>Mumbai</td>\n",
        "      <td>F</td>\n",
@@ -1063,18 +1054,18 @@
        "</div>"
       ],
       "text/plain": [
-       "         index  age     city gender favourite_color\n",
-       "section                                            \n",
-       "A            0   10  Gurgaon      M             red\n",
-       "B            1   22    Delhi      F            blue\n",
-       "C            2   13   Mumbai      F          yellow\n",
-       "D            3   21    Delhi      M            pink\n",
-       "E            4   12   Mumbai      M           black\n",
-       "F            5   11    Delhi      M           green\n",
-       "G            6   17   Mumbai      F             red"
+       "         age     city gender favourite_color\n",
+       "section                                     \n",
+       "A         10  Gurgaon      M             red\n",
+       "B         22    Delhi      F            blue\n",
+       "C         13   Mumbai      F          yellow\n",
+       "D         21    Delhi      M            pink\n",
+       "E         12   Mumbai      M           black\n",
+       "F         11    Delhi      M           green\n",
+       "G         17   Mumbai      F             red"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,21 +1077,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>section</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "index                  1\n",
-       "age                   22\n",
-       "city               Delhi\n",
-       "gender                 F\n",
-       "favourite_color     blue\n",
-       "Name: B, dtype: object"
+       "           city gender\n",
+       "section               \n",
+       "D         Delhi      M\n",
+       "E        Mumbai      M"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[3:5, 1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>section</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           city gender\n",
+       "section               \n",
+       "D         Delhi      M\n",
+       "E        Mumbai      M"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[[3,4], [1,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>section</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           city gender\n",
+       "section               \n",
+       "D         Delhi      M\n",
+       "E        Mumbai      M"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1274,8 @@
     "\n",
     "# data.loc[2]\n",
     "\n",
-    "data.loc['B']"
+    "data.loc['B']\n",
+    "data.loc[['D','E'],['city','gender']]\n"
    ]
   },
   {
@@ -1508,6 +1673,156 @@
    "source": [
     "df[(df['first']==\"Richard\") | (df['last'] == 'Deepdive')]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>country</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>favourite_color</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>section</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>10</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>M</td>\n",
+       "      <td>red</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>22</td>\n",
+       "      <td>GBR</td>\n",
+       "      <td>F</td>\n",
+       "      <td>blue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>13</td>\n",
+       "      <td>TUR</td>\n",
+       "      <td>F</td>\n",
+       "      <td>yellow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>21</td>\n",
+       "      <td>NLD</td>\n",
+       "      <td>M</td>\n",
+       "      <td>pink</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>12</td>\n",
+       "      <td>BEL</td>\n",
+       "      <td>M</td>\n",
+       "      <td>black</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>11</td>\n",
+       "      <td>DEU</td>\n",
+       "      <td>M</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G</th>\n",
+       "      <td>17</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>red</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         age country gender favourite_color\n",
+       "section                                    \n",
+       "A         10     USA      M             red\n",
+       "B         22     GBR      F            blue\n",
+       "C         13     TUR      F          yellow\n",
+       "D         21     NLD      M            pink\n",
+       "E         12     BEL      M           black\n",
+       "F         11     DEU      M           green\n",
+       "G         17     FRA      F             red"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.DataFrame({\n",
+    "    'age' :     [ 10, 22, 13, 21, 12, 11, 17],\n",
+    "    'section' : [ 'A', 'B', 'C', 'D', 'E', 'F', 'G'],\n",
+    "    'country' : [ 'USA', 'GBR', 'TUR', 'NLD', 'BEL', 'DEU', 'FRA'],\n",
+    "    'gender' :  [ 'M', 'F', 'F', 'M', 'M', 'M', 'F'],\n",
+    "    'favourite_color' : [ 'red', 'blue', 'yellow', 'pink', 'black', 'green', 'red']\n",
+    "})\n",
+    "data.set_index('section', inplace=True)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
