pandas code added

--- a/Pandas/preclass_02.ipynb
+++ b/Pandas/preclass_02.ipynb
@@ -1097,10 +1097,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sorted_list(Liste, desc=True, n=2):\n",
+    "    sorted_Liste = sorted(Liste, reverse=desc)[0:n]\n",
+    "    return sorted_Liste\n",
+    "\n",
+    "meine_Liste=[2,3,1,4,5,7]\n",
+    "\n",
+    "sorted_list(meine_Liste, desc=False, n=4)\n"
+   ]
   }
  ],
  "metadata": {
