pandas code added

--- a/Teamwork/2_Week/Pandas-Exercises_Week2 .ipynb
+++ b/Teamwork/2_Week/Pandas-Exercises_Week2 .ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,18 +323,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "119390"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# CODE HERE"
+    "# CODE HERE\n",
+    "hotels[hotels.columns[0]].count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -343,12 +355,14 @@
        "119390"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -359,13 +373,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hotel                                  0\n",
+       "is_canceled                            0\n",
+       "lead_time                              0\n",
+       "arrival_date_year                      0\n",
+       "arrival_date_month                     0\n",
+       "arrival_date_week_number               0\n",
+       "arrival_date_day_of_month              0\n",
+       "stays_in_weekend_nights                0\n",
+       "stays_in_week_nights                   0\n",
+       "adults                                 0\n",
+       "children                               4\n",
+       "babies                                 0\n",
+       "meal                                   0\n",
+       "country                              488\n",
+       "market_segment                         0\n",
+       "distribution_channel                   0\n",
+       "is_repeated_guest                      0\n",
+       "previous_cancellations                 0\n",
+       "previous_bookings_not_canceled         0\n",
+       "reserved_room_type                     0\n",
+       "assigned_room_type                     0\n",
+       "booking_changes                        0\n",
+       "deposit_type                           0\n",
+       "agent                              16340\n",
+       "company                           112593\n",
+       "days_in_waiting_list                   0\n",
+       "customer_type                          0\n",
+       "adr                                    0\n",
+       "required_car_parking_spaces            0\n",
+       "total_of_special_requests              0\n",
+       "reservation_status                     0\n",
+       "reservation_status_date                0\n",
+       "name                                   0\n",
+       "email                                  0\n",
+       "phone-number                           0\n",
+       "credit_card                            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# CODE HERE"
+    "# CODE HERE\n",
+    "hotels.isna().sum()"
    ]
   },
   {
@@ -421,6 +483,25 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, missing data, company column missing: 112593 rows.\n"
+     ]
+    }
+   ],
+   "source": [
+    "d=hotels['company'].isna().sum()\n",
+    "t=f\"Yes, missing data, company column missing: {d} rows.\"\n",
+    "print(t)"
+   ]
   },
   {
    "cell_type": "code",
