pandas code added

--- a/Teamwork/2_Week/Pandas-Exercises_Week2 .ipynb
+++ b/Teamwork/2_Week/Pandas-Exercises_Week2 .ipynb
@@ -527,13 +527,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hotel</th>\n",
+       "      <th>is_canceled</th>\n",
+       "      <th>lead_time</th>\n",
+       "      <th>arrival_date_year</th>\n",
+       "      <th>arrival_date_month</th>\n",
+       "      <th>arrival_date_week_number</th>\n",
+       "      <th>arrival_date_day_of_month</th>\n",
+       "      <th>stays_in_weekend_nights</th>\n",
+       "      <th>stays_in_week_nights</th>\n",
+       "      <th>adults</th>\n",
+       "      <th>...</th>\n",
+       "      <th>customer_type</th>\n",
+       "      <th>adr</th>\n",
+       "      <th>required_car_parking_spaces</th>\n",
+       "      <th>total_of_special_requests</th>\n",
+       "      <th>reservation_status</th>\n",
+       "      <th>reservation_status_date</th>\n",
+       "      <th>name</th>\n",
+       "      <th>email</th>\n",
+       "      <th>phone-number</th>\n",
+       "      <th>credit_card</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Resort Hotel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>342</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>July</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Transient</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Check-Out</td>\n",
+       "      <td>2015-07-01</td>\n",
+       "      <td>Ernest Barnes</td>\n",
+       "      <td>Ernest.Barnes31@outlook.com</td>\n",
+       "      <td>669-792-1661</td>\n",
+       "      <td>************4322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Resort Hotel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>737</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>July</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Transient</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Check-Out</td>\n",
+       "      <td>2015-07-01</td>\n",
+       "      <td>Andrea Baker</td>\n",
+       "      <td>Andrea_Baker94@aol.com</td>\n",
+       "      <td>858-637-6955</td>\n",
+       "      <td>************9157</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          hotel  is_canceled  lead_time  arrival_date_year arrival_date_month  \\\n",
+       "0  Resort Hotel            0        342               2015               July   \n",
+       "1  Resort Hotel            0        737               2015               July   \n",
+       "\n",
+       "   arrival_date_week_number  arrival_date_day_of_month  \\\n",
+       "0                        27                          1   \n",
+       "1                        27                          1   \n",
+       "\n",
+       "   stays_in_weekend_nights  stays_in_week_nights  adults  ...  customer_type  \\\n",
+       "0                        0                     0       2  ...      Transient   \n",
+       "1                        0                     0       2  ...      Transient   \n",
+       "\n",
+       "   adr required_car_parking_spaces total_of_special_requests  \\\n",
+       "0  0.0                           0                         0   \n",
+       "1  0.0                           0                         0   \n",
+       "\n",
+       "  reservation_status reservation_status_date           name  \\\n",
+       "0          Check-Out              2015-07-01  Ernest Barnes   \n",
+       "1          Check-Out              2015-07-01   Andrea Baker   \n",
+       "\n",
+       "                         email  phone-number       credit_card  \n",
+       "0  Ernest.Barnes31@outlook.com  669-792-1661  ************4322  \n",
+       "1       Andrea_Baker94@aol.com  858-637-6955  ************9157  \n",
+       "\n",
+       "[2 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# CODE HERE"
+    "# CODE HERE\n",
+    "#hotels.drop('company', inplace=True, axis=1)\n",
+    "hotels.head(2)"
    ]
   },
   {
@@ -554,13 +687,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PRT    48590\n",
+       "GBR    12129\n",
+       "FRA    10415\n",
+       "ESP     8568\n",
+       "DEU     7287\n",
+       "Name: country, dtype: int64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# CODE HERE"
+    "# CODE HERE\n",
+    "# hotels['country'].value_counts().idxmax() # max()\n",
+    "hotels['country'].value_counts()[:5].sort_values(ascending=False)\n"
    ]
   },
   {
@@ -597,13 +748,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "adr\n",
+       "-6.38           Chase Santos\n",
+       " 0.00       Zachary Reynolds\n",
+       " 0.26           Dorothy Reed\n",
+       " 0.50             David Tran\n",
+       " 1.00        William Burnett\n",
+       "                  ...       \n",
+       " 450.00            Amy Banks\n",
+       " 451.50       Jessica Morris\n",
+       " 508.00       Samuel Hammond\n",
+       " 510.00          Jesus Mason\n",
+       " 5400.00       Daniel Walter\n",
+       "Name: name, Length: 8879, dtype: object"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# CODE HERE"
+    "# CODE HERE\n",
+    "# hotels.groupby(['adr','name'])['name'].max()\n",
+    "# hotels['adr','name']['name'].max()\n",
+    "# hotels[hotels['adr','name']].max()\n",
+    "# hotels.loc[hotels['adr','name'].max()]\n",
+    "# hotels.groupby(['adr','name']).max()\n",
+    "# hotels.groupby(['adr','name']).max()\n",
+    "# hotels.groupby(['name'], sort=False)['adr'].max()\n",
+    "# hotels['adr','name'].max()\n",
+    "hotels.groupby(['adr'])['name'].max()\n",
+    "\n"
    ]
   },
   {
