--- a/Teamwork/2_Week/NumPy-Exercises_Week2.ipynb
+++ b/Teamwork/2_Week/NumPy-Exercises_Week2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -141,6 +141,26 @@
    "metadata": {},
    "source": [
     "#### 4. Create an array of 10 fives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.full(10,5,dtype=float)"
    ]
   },
   {
@@ -515,7 +535,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1 ],\n",
+       "       [0.11, 0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.2 ],\n",
+       "       [0.21, 0.22, 0.23, 0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.3 ],\n",
+       "       [0.31, 0.32, 0.33, 0.34, 0.35, 0.36, 0.37, 0.38, 0.39, 0.4 ],\n",
+       "       [0.41, 0.42, 0.43, 0.44, 0.45, 0.46, 0.47, 0.48, 0.49, 0.5 ],\n",
+       "       [0.51, 0.52, 0.53, 0.54, 0.55, 0.56, 0.57, 0.58, 0.59, 0.6 ],\n",
+       "       [0.61, 0.62, 0.63, 0.64, 0.65, 0.66, 0.67, 0.68, 0.69, 0.7 ],\n",
+       "       [0.71, 0.72, 0.73, 0.74, 0.75, 0.76, 0.77, 0.78, 0.79, 0.8 ],\n",
+       "       [0.81, 0.82, 0.83, 0.84, 0.85, 0.86, 0.87, 0.88, 0.89, 0.9 ],\n",
+       "       [0.91, 0.92, 0.93, 0.94, 0.95, 0.96, 0.97, 0.98, 0.99, 1.  ]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.arange(1,101).reshape(10,10) / 100\n",
+    "np.arange(0.01,1.01,0.01).reshape(10,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -535,13 +585,15 @@
        "       [0.91, 0.92, 0.93, 0.94, 0.95, 0.96, 0.97, 0.98, 0.99, 1.  ]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linspace(0.01,1,num=100).reshape(10,10)"
+    "np.linspace(0.01,1,num=100).reshape(10,10)\n",
+    "# np.linspace(0.01,1,num=100)\n",
+    "# np.linspace(0.,1,num=100).reshape(10,10)"
    ]
   },
   {
@@ -639,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +704,7 @@
        "       [21, 22, 23, 24, 25]])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -738,13 +790,15 @@
        "20"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mat[3:4,4:][0][0]"
+    "# mat[3:4,4:][0][0]\n",
+    "mat[3,4]\n",
+    "# mat[:4].size"
    ]
   },
   {
@@ -776,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -789,13 +843,14 @@
        "       [12]])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mat[0:3,1:2]"
+    "# mat[0:3,1:2]\n",
+    "mat[0:3,[1]]"
    ]
   },
   {
@@ -985,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -996,13 +1051,14 @@
        "7.211102550927978"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mat.std()"
+    "# mat.std()\n",
+    "np.std(mat)"
    ]
   },
   {
@@ -1085,13 +1141,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.22199317, 0.87073231, 0.20671916, 0.91861091])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Great question"
+    "# Great question\n",
+    "np.random.seed(5)\n",
+    "np.random.rand(4)"
    ]
   },
   {
