pandas code added

--- a/Pandas/dolu_DAwPy_S5_(Groupby,Aggregation,DataFrame_Operations,Pivot_Tables,Stack).ipynb
+++ b/Pandas/dolu_DAwPy_S5_(Groupby,Aggregation,DataFrame_Operations,Pivot_Tables,Stack).ipynb
@@ -8077,7 +8077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "hZtha_jb97Se",
     "outputId": "efa37ac3-e965-4b2a-96c9-f507c52ff52e"
@@ -8135,7 +8135,7 @@
        "2  3  30"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8147,7 +8147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "TuHZsT8D97Sf",
     "outputId": "deb45a5f-cb26-4246-cbdf-b417c234587d"
@@ -8205,7 +8205,7 @@
        "2  13  40"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8216,7 +8216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "BiWgHc8I97Sf",
     "outputId": "c99959c7-b8ea-4ea9-dec9-3caa215302ca"
@@ -8274,7 +8274,7 @@
        "2  13  40"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8285,7 +8285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "ZWo5HVTU97Sg",
     "outputId": "f2d75aed-ee66-49fb-87c5-53aecd6bff85"
@@ -8351,7 +8351,7 @@
        "2  3  30    40    40"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8378,7 +8378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "0UEglrRW97Sh",
     "outputId": "9c559ced-44e1-48c9-b445-32b5c33a14f6"
@@ -8436,7 +8436,7 @@
        "2  3  30"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8448,7 +8448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "P5HCWqcy97Sh",
     "outputId": "1e740bed-653a-4c7c-c0b3-9d5b9bb65b06"
@@ -8506,7 +8506,7 @@
        "2  1.732051  5.477226"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8522,7 +8522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "RXtSkdVz97Si",
     "outputId": "015ec119-babe-4080-b1a1-1497faa0c29e"
@@ -8580,7 +8580,7 @@
        "2  1.732051  5.477226"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8747,7 +8747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "Qov_wjRM97Sj",
     "outputId": "2e0c8b3c-b570-4990-8987-df7576c6a1fa"
@@ -8761,7 +8761,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8771,7 +8771,7 @@
     "\n",
     "df5.apply(lambda x: x.sum())\n",
     "\n",
-    "# df5.transform(lambda x:x.sum()) gives an error"
+    "# df5.transform(lambda x:x.sum()) # gives an error"
    ]
   },
   {
@@ -8818,7 +8818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "id": "1Sb3JL4597Sk",
     "outputId": "de7f532b-00ef-435e-9db2-ec572136c58a"
@@ -8922,7 +8922,7 @@
        "8   c  8  3"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8990,7 +8990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "id": "3ct_R2PD97Sp",
     "outputId": "32f8b599-0278-460d-c0f9-08de994eeecb"
@@ -9008,10 +9008,10 @@
        "6     9\n",
        "7    12\n",
        "8    15\n",
-       "Name: A, dtype: int32"
+       "Name: A, dtype: int64"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
