pandas assingment code added

--- a/Assignment/Assignment-1-Student.ipynb
+++ b/Assignment/Assignment-1-Student.ipynb
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1189,13 +1189,14 @@
        "array([78, 79, 81, 18, 20, 85, 25])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mat[(mat<10)] + mat[(mat >12)]"
+    "m=mat[(mat<10)] + mat[(mat >12)]\n",
+    "m"
    ]
   },
   {
@@ -1203,6 +1204,26 @@
    "metadata": {},
    "source": [
     "#### 21. Get the standard deviation of the result above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29.700546274093877"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(m)"
    ]
   },
   {
@@ -1250,8 +1271,27 @@
     }
    ],
    "source": [
-    "#print array here\n",
-    "mat"
+    "#print array here\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(mat[:,1:2])"
    ]
   },
   {
@@ -1304,7 +1344,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8],\n",
+       "       [ 9, 10, 11, 12],\n",
+       "       [13, 14, 15, 16]])"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat=  np.arange(1,17).reshape(4,4)\n",
+    "mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1377,7 @@
        "array([ 9, 10, 11, 12])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1403,8 @@
     }
    ],
    "source": [
-    "#median\n"
+    "#median\n",
+    "np.median(mat[2])"
    ]
   },
   {
@@ -1359,7 +1424,8 @@
     }
    ],
    "source": [
-    "#mean\n"
+    "#mean\n",
+    "np.mean(mat[2])"
    ]
   },
   {
@@ -1379,7 +1445,8 @@
     }
    ],
    "source": [
-    "#std\n"
+    "#std\n",
+    "np.std(mat[2])"
    ]
   },
   {
