--- a/Assignment/Assignment-1-Student.ipynb
+++ b/Assignment/Assignment-1-Student.ipynb
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1799,11 +1799,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 148654 entries, 0 to 148653\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column            Non-Null Count   Dtype  \n",
+      "---  ------            --------------   -----  \n",
+      " 0   Id                148654 non-null  int64  \n",
+      " 1   EmployeeName      148654 non-null  object \n",
+      " 2   JobTitle          148654 non-null  object \n",
+      " 3   BasePay           148045 non-null  float64\n",
+      " 4   OvertimePay       148650 non-null  float64\n",
+      " 5   OtherPay          148650 non-null  float64\n",
+      " 6   Benefits          112491 non-null  float64\n",
+      " 7   TotalPay          148654 non-null  float64\n",
+      " 8   TotalPayBenefits  148654 non-null  float64\n",
+      " 9   Year              148654 non-null  int64  \n",
+      " 10  Notes             0 non-null       float64\n",
+      " 11  Agency            148654 non-null  object \n",
+      " 12  Status            0 non-null       float64\n",
+      "dtypes: float64(8), int64(2), object(3)\n",
+      "memory usage: 14.7+ MB\n"
+     ]
+    }
+   ],
    "source": [
-    "###burad kaldim"
+    "###burad kaldim\n",
+    "sal.info()"
    ]
   },
   {
@@ -1839,6 +1867,194 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>BasePay</th>\n",
+       "      <th>OvertimePay</th>\n",
+       "      <th>OtherPay</th>\n",
+       "      <th>Benefits</th>\n",
+       "      <th>TotalPay</th>\n",
+       "      <th>TotalPayBenefits</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Notes</th>\n",
+       "      <th>Status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>148654.000000</td>\n",
+       "      <td>148045.000000</td>\n",
+       "      <td>148650.000000</td>\n",
+       "      <td>148650.000000</td>\n",
+       "      <td>112491.000000</td>\n",
+       "      <td>148654.000000</td>\n",
+       "      <td>148654.000000</td>\n",
+       "      <td>148654.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>74327.500000</td>\n",
+       "      <td>66325.448840</td>\n",
+       "      <td>5066.059886</td>\n",
+       "      <td>3648.767297</td>\n",
+       "      <td>25007.893151</td>\n",
+       "      <td>74768.321972</td>\n",
+       "      <td>93692.554811</td>\n",
+       "      <td>2012.522643</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>42912.857795</td>\n",
+       "      <td>42764.635495</td>\n",
+       "      <td>11454.380559</td>\n",
+       "      <td>8056.601866</td>\n",
+       "      <td>15402.215858</td>\n",
+       "      <td>50517.005274</td>\n",
+       "      <td>62793.533483</td>\n",
+       "      <td>1.117538</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-166.010000</td>\n",
+       "      <td>-0.010000</td>\n",
+       "      <td>-7058.590000</td>\n",
+       "      <td>-33.890000</td>\n",
+       "      <td>-618.130000</td>\n",
+       "      <td>-618.130000</td>\n",
+       "      <td>2011.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>37164.250000</td>\n",
+       "      <td>33588.200000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11535.395000</td>\n",
+       "      <td>36168.995000</td>\n",
+       "      <td>44065.650000</td>\n",
+       "      <td>2012.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>74327.500000</td>\n",
+       "      <td>65007.450000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>811.270000</td>\n",
+       "      <td>28628.620000</td>\n",
+       "      <td>71426.610000</td>\n",
+       "      <td>92404.090000</td>\n",
+       "      <td>2013.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>111490.750000</td>\n",
+       "      <td>94691.050000</td>\n",
+       "      <td>4658.175000</td>\n",
+       "      <td>4236.065000</td>\n",
+       "      <td>35566.855000</td>\n",
+       "      <td>105839.135000</td>\n",
+       "      <td>132876.450000</td>\n",
+       "      <td>2014.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>148654.000000</td>\n",
+       "      <td>319275.010000</td>\n",
+       "      <td>245131.880000</td>\n",
+       "      <td>400184.250000</td>\n",
+       "      <td>96570.660000</td>\n",
+       "      <td>567595.430000</td>\n",
+       "      <td>567595.430000</td>\n",
+       "      <td>2014.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Id        BasePay    OvertimePay       OtherPay  \\\n",
+       "count  148654.000000  148045.000000  148650.000000  148650.000000   \n",
+       "mean    74327.500000   66325.448840    5066.059886    3648.767297   \n",
+       "std     42912.857795   42764.635495   11454.380559    8056.601866   \n",
+       "min         1.000000    -166.010000      -0.010000   -7058.590000   \n",
+       "25%     37164.250000   33588.200000       0.000000       0.000000   \n",
+       "50%     74327.500000   65007.450000       0.000000     811.270000   \n",
+       "75%    111490.750000   94691.050000    4658.175000    4236.065000   \n",
+       "max    148654.000000  319275.010000  245131.880000  400184.250000   \n",
+       "\n",
+       "            Benefits       TotalPay  TotalPayBenefits           Year  Notes  \\\n",
+       "count  112491.000000  148654.000000     148654.000000  148654.000000    0.0   \n",
+       "mean    25007.893151   74768.321972      93692.554811    2012.522643    NaN   \n",
+       "std     15402.215858   50517.005274      62793.533483       1.117538    NaN   \n",
+       "min       -33.890000    -618.130000       -618.130000    2011.000000    NaN   \n",
+       "25%     11535.395000   36168.995000      44065.650000    2012.000000    NaN   \n",
+       "50%     28628.620000   71426.610000      92404.090000    2013.000000    NaN   \n",
+       "75%     35566.855000  105839.135000     132876.450000    2014.000000    NaN   \n",
+       "max     96570.660000  567595.430000     567595.430000    2014.000000    NaN   \n",
+       "\n",
+       "       Status  \n",
+       "count     0.0  \n",
+       "mean      NaN  \n",
+       "std       NaN  \n",
+       "min       NaN  \n",
+       "25%       NaN  \n",
+       "50%       NaN  \n",
+       "75%       NaN  \n",
+       "max       NaN  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sal.describe()"
+   ]
   },
   {
    "cell_type": "code",
@@ -2024,7 +2240,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sal.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
