Python matplotlib code added

--- a/Data_Visualization/Matplotlib/04_W3S_.ipynb
+++ b/Data_Visualization/Matplotlib/04_W3S_.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print()\n"
+    "print()\n",
+    "print()\n",
+    "print()\n",
+    "\n"
    ]
   }
  ],
