Python Pandas code added

--- a/Pandas/DAwPy_S8_(Data_Input_Output).ipynb
+++ b/Pandas/DAwPy_S8_(Data_Input_Output).ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {
     "id": "C-mqq2Hl6kSP"
    },
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "WindowsPath('c:/Users/bulen/OneDrive/Desktop/Data_Science_Study/Pandas')"
+       "WindowsPath('d:/YEREL_GIT_REPO/Data_Science_Study/Pandas')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\bulen\\OneDrive\\Desktop\\Data_Science_Study\\Pandas\n"
+      "d:\\YEREL_GIT_REPO\\Data_Science_Study\\Pandas\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {
     "id": "m0YeHmPM6kSR",
     "outputId": "8b2ba9d2-d3c8-4604-930c-a1f72c4d5133"
@@ -123,10 +123,10 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\bulen\\\\OneDrive\\\\Desktop\\\\Data_Science_Study\\\\Pandas'"
+       "'d:\\\\YEREL_GIT_REPO\\\\Data_Science_Study\\\\Pandas'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,16 +159,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\bulen\\\\OneDrive\\\\Desktop\\\\Data_Science_Study\\\\Pandas'"
+       "'d:\\\\YEREL_GIT_REPO\\\\Data_Science_Study\\\\Pandas'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {
     "id": "GEzzLxyC6kSU",
     "outputId": "cd7b2185-13b9-4ad3-ba14-967c42e8adf2"
@@ -226,7 +226,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_69188/711597695.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'example.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_8208/711597695.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'example.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\util\\_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    309\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    310\u001b[0m                 )\n\u001b[1;32m--> 311\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    312\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    313\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\io\\parsers\\readers.py\u001b[0m in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, error_bad_lines, warn_bad_lines, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[0;32m    584\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkwds_defaults\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    585\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 586\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    587\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    588\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\io\\parsers\\readers.py\u001b[0m in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    480\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    481\u001b[0m     \u001b[1;31m# Create the parser.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 482\u001b[1;33m     \u001b[0mparser\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    483\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    484\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -3002,7 +3002,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: lxml in c:\\users\\tuseb.000\\anaconda3\\lib\\site-packages (4.6.3)\n"
+      "Collecting lxml\n",
+      "  Downloading lxml-4.7.1-cp310-cp310-win_amd64.whl (3.7 MB)\n",
+      "Installing collected packages: lxml\n",
+      "Successfully installed lxml-4.7.1\n"
      ]
     }
    ],
@@ -3012,7 +3015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "BYqBvEpy6kSl"
    },
@@ -3023,7 +3026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "NxV_2fbT6kSm",
     "outputId": "e12bd048-7a32-4a0a-9506-46baa601fd25",
@@ -3034,15 +3037,15 @@
      "data": {
       "text/plain": [
        "[          Country  Deaths  Death rate*  Total Cases  \\\n",
-       " 0              US  846729        258.0     65249859   \n",
-       " 1          Brazil  621327        294.4     23015128   \n",
-       " 2           India  486451         35.6     37380253   \n",
-       " 3          Russia  315495        218.5     10651867   \n",
-       " 4          Mexico  301410        236.3      4368314   \n",
+       " 0              US  862472        262.8     70216915   \n",
+       " 1          Brazil  623370        295.4     24054405   \n",
+       " 2           India  489848         35.8     39543328   \n",
+       " 3          Russia  320178        221.8     10988027   \n",
+       " 4          Mexico  303183        237.6      4667829   \n",
        " ..            ...     ...          ...          ...   \n",
-       " 219         Samoa       0          0.0            3   \n",
-       " 220  Cook Islands       0          0.0            2   \n",
-       " 221      Kiribati       0          0.0            2   \n",
+       " 219  Saint Helena       0          0.0            4   \n",
+       " 220      Kiribati       0          0.0            2   \n",
+       " 221  Cook Islands       0          0.0            2   \n",
        " 222         Tonga       0          0.0            1   \n",
        " 223    Micronesia       0          0.0            1   \n",
        " \n",
@@ -3061,11 +3064,11 @@
        " \n",
        " [224 rows x 6 columns],\n",
        "                                          Location  Percent fully vaccinated  \\\n",
-       " 0                                           World                      50.0   \n",
+       " 0                                           World                      52.0   \n",
        " 1                                           China                      85.0   \n",
-       " 2                                           India                      47.0   \n",
-       " 3                                              US                      62.0   \n",
-       " 4                                          Brazil                      68.0   \n",
+       " 2                                           India                      49.0   \n",
+       " 3                                              US                      63.0   \n",
+       " 4                                          Brazil                      69.0   \n",
        " ..                                            ...                       ...   \n",
        " 212                British Indian Ocean Territory                       0.0   \n",
        " 213                                       Eritrea                       0.0   \n",
@@ -3074,11 +3077,11 @@
        " 216                                       Vatican                       0.0   \n",
        " \n",
        "      Total doses  \n",
-       " 0     9676232062  \n",
-       " 1     2937632000  \n",
-       " 2     1570696006  \n",
-       " 3      526898876  \n",
-       " 4      343352666  \n",
+       " 0     9886534550  \n",
+       " 1     2968121000  \n",
+       " 2     1622210924  \n",
+       " 3      534608709  \n",
+       " 4      352952210  \n",
        " ..           ...  \n",
        " 212            0  \n",
        " 213            0  \n",
@@ -3089,7 +3092,7 @@
        " [217 rows x 3 columns]]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
