Python Pandas code added

--- a/DE_Pandas_Unterricht_Notebook/Statistics_WHR_01_De_mty.ipynb
+++ b/DE_Pandas_Unterricht_Notebook/Statistics_WHR_01_De_mty.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "92614827",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "22c663a7",
    "metadata": {},
    "outputs": [
@@ -580,7 +580,7 @@
        "[149 rows x 20 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "2f97da93",
    "metadata": {
     "lang": "de"
@@ -616,14 +616,14 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# CODE HIER um die Spalten zu sehen\n",
-    "happy_index.columns"
+    "happy_index.columns #df.keys()"
    ]
   },
   {
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "ae9c1be0",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,7 +1565,7 @@
     }
    ],
    "source": [
-    "hi.select_dtypes(include=['int64','float64']).columns"
+    "hi.select_dtypes(include=['int64','float64']).columns # include number"
    ]
   },
   {
@@ -1612,7 +1612,7 @@
     }
    ],
    "source": [
-    "hi.select_dtypes(exclude=['int64','float64']).columns\n"
+    "hi.select_dtypes(exclude=['int64','float64']).columns # include object\n"
    ]
   },
   {
@@ -1833,6 +1833,14 @@
     "## Annahmen\n",
     "-Ohne irgendwelche visuellen Darstellungen zu machen, treffen Sie bitte Annahmen, indem Sie sich die beschreibenden Informationen der Variablen selbst ansehen und Ihre Annahmen aufschreiben."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b29bc04b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
